[package]
name = "logik_logic"
version = "0.1.0"
authors = ["Eskil Q <eskilq@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cbindgen = "0.13.2"

[lib]
name = "logic"
crate-type = ["cdylib"]